gcc warnings compiling various libraries files

XMLWordPrintable

    • b06
    • x86
    • linux

        jdk/src/share/native/com/sun/java/util/jar/pack/bands.cpp:456:1: warning: missing initializer for member ‘band_init::defc’ [-Wmissing-field-initializers]
        jdk/src/share/native/com/sun/java/util/jar/pack/bands.cpp:456:1: warning: missing initializer for member ‘band_init::index’ [-Wmissing-field-initializers]
        jdk/src/share/native/sun/java2d/opengl/OGLContext.c:1058:9: warning: implicit declaration of function ‘jio_snprintf’ [-Wimplicit-function-declaration]
        jdk/src/solaris/native/sun/awt/awt_Font.c:503:50: warning: comparison with string literal results in unspecified behavior [-Waddress]
        jdk/src/solaris/native/sun/awt/awt_LoadLibrary.c:270:1: warning: type defaults to ‘int’ in declaration of ‘getAwtLockFunctions_type’ [-Wimplicit-int]
        jdk/src/solaris/native/sun/awt/awt_LoadLibrary.c:276:1: warning: type defaults to ‘int’ in declaration of ‘getAwtData_type’ [-Wimplicit-int]
        jdk/src/solaris/native/sun/java2d/x11/X11SurfaceData.c:513:17: warning: assignment makes integer from pointer without a cast [enabled by default]
        jdk/src/solaris/native/sun/xawt/XToolkit.c:702:9: warning: format ‘%ld’ expects argument of type ‘long int’, but argument 2 has type ‘uint32_t’ [-Wformat]

              Assignee:
              Mikael Vidstedt
              Reporter:
              Mikael Vidstedt
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

                Created:
                Updated:
                Resolved: