8035287: gcc warnings compiling various libraries files

Reviewed-by: prr